--- a/pagina1.html
+++ b/pagina1.html
@@ -21,15 +21,17 @@
         <a href="pagina3.html">Página 3</a>
     </nav>
     <div class="content">
-        <h2>Página 1</h2>
-        <p>Párrafo 1.</p>
-        <p>Párrafo 2.</p>
-        <p>Párrafo 3.</p>
-        <img src="imagen1.jpg" alt="Descripción de la imagen 1">
-        <img src="imagen2.jpg" alt="Descripción de la imagen 2">
-        <img src="imagen3.jpg" alt="Descripción de la imagen 3">
+        <h2>Página 1: Coldplay</h2>
+        <p>Parachutes.</p>
+        <p>X & Y.</p>
+        <p>A Rush of blood to the head.</p>
+        <img src="IMG/parachutes.jpg" alt="Descripción de la imagen 1">
+        <img src="IMG/xy.jpg" alt="Descripción de la imagen 2">
+        <img src="IMG/Rush.jpg" alt="Descripción de la imagen 3">
         <!-- Componentes de Bootstrap -->
-        <button class="btn btn-primary">Botón de Bootstrap</button>
+        <div class="mt-3">
+            <button class="btn btn-primary">Botón de Bootstrap</button>
+        </div>
         <div class="alert alert-success mt-3" role="alert">
             Este es un componente de Bootstrap.
         </div>
