Agregue una carpeta de imagenes y puse una imagen en el index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="pagina3.html">Página 3</a>
     </nav>
     <div class="content">
-        <img src="tu_imagen.jpg" alt="Descripción de la imagen">
+        <img src="Imagenes/tu_imagen.jfif" alt="Descripción de la imagen">
         <h2>Texto Grande Aquí</h2>
         <p>¡Bienvenido a mi página web! Aquí encontrarás contenido interesante.</p>
     </div>
