--- a/pagina3.html
+++ b/pagina3.html
@@ -21,15 +21,17 @@
         <a href="pagina3.html">Página 3</a>
     </nav>
     <div class="content">
-        <h2>Página 3</h2>
-        <p>Párrafo 1.</p>
-        <p>Párrafo 2.</p>
-        <p>Párrafo 3.</p>
-        <img src="imagen1.jpg" alt="Descripción de la imagen 1">
-        <img src="imagen2.jpg" alt="Descripción de la imagen 2">
-        <img src="imagen3.jpg" alt="Descripción de la imagen 3">
+        <h2>Página 3: 5 Seconds of Summer</h2>
+        <p>Youngblood.</p>
+        <p>CALM.</p>
+        <p>5SOS5.</p>
+        <img src="IMG/yb.jpg" alt="Descripción de la imagen 1">
+        <img src="IMG/CALM.jpg" alt="Descripción de la imagen 2">
+        <img src="IMG/5sos5.jpg" alt="Descripción de la imagen 3">
         <!-- Componentes de Bootstrap -->
-        <button class="btn btn-primary">Botón de Bootstrap</button>
+        <div class="mt-3">
+            <button class="btn btn-primary">Botón de Bootstrap</button>
+        </div>
         <div class="alert alert-success mt-3" role="alert">
             Este es un componente de Bootstrap.
         </div>
