Se cambio la imagen del index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="pagina3.html">Página 3</a>
     </nav>
     <div class="content">
-        <img src="IMG/tu_imagen.jpg" alt="Descripción de la imagen">
+        <img src="IMG/vinilo.jpg" alt="Descripción de la imagen">
         <h2>Texto Grande Aquí</h2>
         <p>No se me ocurrio de que hacer la pagina, asi que puse fotos de mis albums favoritos de 3 artistas</p>
     </div>
