Agregado de txt y modificacion de index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img src="IMG/vinilo.jpg" alt="Descripción de la imagen">
         <h2>Texto Grande Aquí</h2>
         <p>No se me ocurrio de que hacer la pagina, asi que puse fotos de mis albums favoritos de 3 artistas</p>
+        <p>Fotos de los albumes favoritos de emilio.</p>
     </div>
 </body>
 
