--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Mi Página Web</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,10 +21,39 @@
     </nav>
     <div class="content">
         <img src="IMG/vinilo.jpg" alt="Descripción de la imagen">
+</div>
+    <!--carrusel-->
+
+      <!--Carrusel-->
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="IMG/parachutes.jpg" class="d-block mx-auto" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="IMG/musica.jpg" class="d-block mx-auto" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="IMG/carreras_lasallelaguna_musica.jpg" class="d-block mx-auto" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
         <h2>Texto Grande Aquí</h2>
         <p>No se me ocurrio de que hacer la pagina, asi que puse fotos de mis albums favoritos de 3 artistas</p>
         <p>Fotos de los albumes favoritos de emilio.</p>
-    </div>
+    
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
